--- a/packages/typespec-autorest-canonical/tsconfig.json
+++ b/packages/typespec-autorest-canonical/tsconfig.json
@@ -5,7 +5,8 @@
     { "path": "../../core/packages/compiler/tsconfig.json" },
     { "path": "../../core/packages/http/tsconfig.json" },
     { "path": "../../core/packages/openapi/tsconfig.json" },
-    { "path": "../typespec-azure-core/tsconfig.json" }
+    { "path": "../typespec-azure-core/tsconfig.json" },
+    { "path": "../typespec-azure-resource-manager/tsconfig.json" }
   ],
   "compilerOptions": {
     "outDir": "dist",
