--- a/.prettierignore
+++ b/.prettierignore
@@ -72,6 +72,8 @@ core/packages/compiler/templates/__snapshots__/
 # Tm Grammars generated files
 core/grammars/
 
+# Generated openapi files
+packages/samples/common-types/**/*.json
 
 # Client emitters not part of workspace that shouldn't be needed in this repo
 core/packages/http-client-csharp/
