--- a/packages/samples/specs/resource-manager/tspconfig.yaml
+++ b/packages/samples/specs/resource-manager/tspconfig.yaml
@@ -4,6 +4,7 @@ options:
   "@azure-tools/typespec-autorest":
     use-read-only-status-schema: true
     arm-types-dir: "{project-root}/common-types"
+    arm-resource-flattening: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
