--- a/eng/pipelines/templates/1es-redirect.yml
+++ b/eng/pipelines/templates/1es-redirect.yml
@@ -8,6 +8,11 @@ resources:
       type: git
       name: internal/azure-sdk-build-tools
       ref: refs/tags/azure-sdk-build-tools_20230613.1
+    - repository: azure-sdk-tools
+      type: github
+      name: Azure/azure-sdk-tools
+      endpoint: azure
+      ref: refs/heads/main
 
 parameters:
   - name: stages
@@ -35,6 +40,9 @@ extends:
         name: azsdk-pool-mms-win-2022-general
         image: azsdk-pool-mms-win-2022-1espt
         os: windows
+      sourceRepositoriesToScan:
+        exclude:
+          - repository: azure-sdk-tools 
       psscriptanalyzer:
         compiled: true
         break: true
