--- a/eng/pipelines/templates/1es-redirect.yml
+++ b/eng/pipelines/templates/1es-redirect.yml
@@ -8,11 +8,10 @@ resources:
       type: git
       name: internal/azure-sdk-build-tools
       ref: refs/tags/azure-sdk-build-tools_20230613.1
-    - repository: azure-sdk-tools
+    - repository: azure-rest-api-specs
       type: github
-      name: Azure/azure-sdk-tools
+      name: Azure/azure-rest-api-specs
       endpoint: azure
-      ref: refs/heads/main
 
 parameters:
   - name: stages
@@ -42,7 +41,7 @@ extends:
         os: windows
       sourceRepositoriesToScan:
         exclude:
-          - repository: azure-sdk-tools 
+          - repository: azure-rest-api-specs
       psscriptanalyzer:
         compiled: true
         break: true
