--- a/eng/pipelines/pr-breaking-check.yml
+++ b/eng/pipelines/pr-breaking-check.yml
@@ -8,7 +8,7 @@ extends:
     stages:
       - stage: Build_and_Validate
         jobs:
-          - job: Validate generated swagger
+          - job: Validate_generated_swagger
             steps:
             - checkout: self
               submodules: true
