--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -6,6 +6,9 @@ parameters:
   - name: pnpmStorePath
     type: string
     default: $(Pipeline.Workspace)/.pnpm-store
+  - name: workingDirectory
+    type: string
+    default: $(Build.SourcesDirectory)
 steps:
   - task: UseDotNet@2
     inputs:
@@ -22,12 +25,15 @@ steps:
       key: 'pnpm | "$(Agent.OS)" | pnpm-lock.yaml'
       path: ${{ parameters.pnpmStorePath }}
     displayName: Cache pnpm store
+    workingDirectory: ${{ parameters.workingDirectory }}
   - script: |
       corepack enable
       corepack prepare pnpm@latest-8 --activate
     displayName: Install pnpm
+    workingDirectory: ${{ parameters.workingDirectory }}
   - script: pnpm config set store-dir ${{ parameters.pnpmStorePath }}
     displayName: Setup pnpm cache dir
+    workingDirectory: ${{ parameters.workingDirectory }}
 
   - script: |
       echo "Node:"
@@ -35,11 +41,14 @@ steps:
       echo "Pnpm:"
       pnpm -v
     displayName: "Log tool versions used"
+    workingDirectory: ${{ parameters.workingDirectory }}
 
   # purge before install to ensure a clean state between retries
   - script: pnpm install
     displayName: Install JavaScript Dependencies
     retryCountOnTaskFailure: 3
+    workingDirectory: ${{ parameters.workingDirectory }}
 
   - script: dotnet restore core/packages/typespec-vs
     displayName: Restore .NET Dependencies
+    workingDirectory: ${{ parameters.workingDirectory }}
