--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -30,7 +30,8 @@
     "test:watch": "vitest -w",
     "test:ci": "vitest run --coverage  --reporter=junit --reporter=default",
     "test:regen": "cross-env RECORD=true vitest run",
-    "regen-samples": "cross-env RECORD=true vitest run"
+    "regen-common-types": "tsx ./common-types/gen.ts",
+    "regen-samples": "pnpm regen-common-types && cross-env RECORD=true vitest run"
   },
   "files": [
     "lib/*.tsp",
