--- a/eng/pipelines/pr-breaking-check.yml
+++ b/eng/pipelines/pr-breaking-check.yml
@@ -46,7 +46,7 @@ stages:
             $packageJson | ConvertTo-Json -Depth 100 | Out-File -Path "package.json" -Encoding utf8 -NoNewline -Force
           displayName: 'Update package.json in azure-rest-api-specs'
           workingDirectory: $(Build.SourcesDirectory)/azure-rest-api-specs
-        - script: pnpm install
+        - script: npm install
           displayName: Install updated TypeSpec dependencies
           workingDirectory: $(Build.SourcesDirectory)/azure-rest-api-specs
         - pwsh: ./eng/scripts/TypeSpec-Generate-Swagger.ps1 -CheckAll
