Fix ensure regen of common types

--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -24,6 +24,9 @@ steps:
 
   - template: /eng/pipelines/templates/upload-coverage.yml
 
+  - script: pnpm run regen-samples
+    displayName: Regen samples
+
   - script: node eng/scripts/check-for-changed-files.js
     displayName: Check Git Status For Changed Files
 
