--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -24,7 +24,7 @@ steps:
     displayName: Cache pnpm store
   - script: |
       corepack enable
-      corepack prepare pnpm@latest-8 --activate
+      corepack prepare pnpm --activate
     displayName: Install pnpm
   - script: pnpm config set store-dir ${{ parameters.pnpmStorePath }}
     displayName: Setup pnpm cache dir
