Add node 22 to CI

--- a/eng/pipelines/pr.yml
+++ b/eng/pipelines/pr.yml
@@ -25,6 +25,8 @@ extends:
                   nodeVersion: "18.x"
                 "Node 20.x":
                   nodeVersion: "20.x"
+                "Node 22.x":
+                  nodeVersion: "22.x"
 
             pool:
               name: $(LINUXPOOL)
