--- a/packages/typespec-azure-resource-manager/tsconfig.json
+++ b/packages/typespec-azure-resource-manager/tsconfig.json
@@ -13,5 +13,5 @@
     "rootDir": ".",
     "tsBuildInfoFile": "temp/tsconfig.tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "generated-defs/**/*.ts", "test/**/*.ts"]
 }
