--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "clean": "rimraf ./dist ./temp",
-    "build": "npm run gen-extern-signature && && npm run regen-autorest-openapi-schema && tsc -p . && npm run lint-typespec-library",
+    "build": "npm run gen-extern-signature && npm run regen-autorest-openapi-schema && tsc -p . && npm run lint-typespec-library",
     "watch": "tsc -p . --watch",
     "gen-extern-signature": "tspd --enable-experimental gen-extern-signature .",
     "lint-typespec-library": "tsp compile . --warn-as-error --import @typespec/library-linter --no-emit",
