--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
     "regen-docs": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run regen-docs",
     "regen-samples": "pnpm run-all run regen-samples",
-    "test:ci": "pnpm -r --filter=!./core/ --filter=!./core/** --aggregate-output --reporter=append-only --sequential test:ci",
+    "test": "vitest run --workspace ./vitest.workspace.fast.ts",
+    "test:ci": "pnpm test --coverage --reporter=junit --reporter=default",
     "test:e2e": "pnpm run-all run test:e2e",
-    "test": "pnpm run-all run test",
     "update-latest-docs": "pnpm run-all run update-latest-docs",
     "watch": "tsc --build ./tsconfig.ws.json --watch",
     "sync-labels": "tsx ./core/eng/common/scripts/labels/sync-labels.ts --config ./eng/config/labels.ts"
