[tcgc] add example model in tcgc (#1076)
resolve: https://github.com/Azure/typespec-azure/issues/974

design doc:
https://gist.github.com/tadelesh/a61883724a5cd072ef18f500826c7a7f

--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -61,6 +61,7 @@
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@typespec/compiler": "workspace:~",
     "@typespec/http": "workspace:~",
+    "@typespec/openapi": "workspace:~",
     "@typespec/rest": "workspace:~",
     "@typespec/versioning": "workspace:~"
   },
@@ -71,10 +72,10 @@
     "@typespec/compiler": "workspace:~",
     "@typespec/http": "workspace:~",
     "@typespec/library-linter": "workspace:~",
+    "@typespec/openapi": "workspace:~",
     "@typespec/prettier-plugin-typespec": "workspace:~",
     "@typespec/rest": "workspace:~",
     "@typespec/tspd": "workspace:~",
-    "@typespec/versioning": "workspace:~",
     "@typespec/xml": "workspace:~",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
