--- a/tsconfig.eng.json
+++ b/tsconfig.eng.json
@@ -1,4 +1,6 @@
 {
   "extends": "./core/tsconfig.base.json",
-  "include": ["./eng", "./core/eng"]
+  "include": ["./eng", "./core/eng"],
+  "exclude": ["./core/eng/vitest.config.ts"]
+
 }
