--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @bterlson @markcowl @allenjzhang @timotheeguerin
+* @bterlson @markcowl @allenjzhang @timotheeguerin @mario-guerra
 
 /packages/typespec-client-generator-core @lmazuel @m-nash @iscai-msft @srnagar @joheredi
 
