--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "~18.11.19",
     "@typescript-eslint/parser": "^7.15.0",
     "@typescript-eslint/utils": "^7.15.0",
+    "@vitest/coverage-v8": "^1.6.0",
     "c8": "^10.1.2",
     "cspell": "^8.9.1",
     "eslint": "^8.57.0",
