--- a/eng/pipelines/pr-tools.yml
+++ b/eng/pipelines/pr-tools.yml
@@ -38,6 +38,7 @@ extends:
                   scriptLocation: inlineScript
                   inlineScript: |
                     az storage blob upload-batch \
+                      --auth-mode login \
                       --destination \$web \
                       --account-name "cadlplayground" \
                       --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
@@ -51,6 +52,7 @@ extends:
                   scriptLocation: inlineScript
                   inlineScript: |
                     az storage blob upload-batch \
+                      --auth-mode login \
                       --destination \$web \
                       --account-name "tspwebsitepr" \
                       --destination-path $(TYPESPEC_WEBSITE_BASE_PATH) \
