--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,4 @@ packages:
   - core/packages/*
   - "!core/packages/http-client-csharp/**"
   - "!core/packages/http-client-java/**"
+  - "!core/packages/http-client-python/**"
