--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -65,6 +65,7 @@
     "@typespec/library-linter": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@typespec/rest": "workspace:~",
+    "@typespec/streams": "workspace:~",
     "@typespec/tspd": "workspace:~",
     "@vitest/coverage-v8": "^2.1.1",
     "c8": "^10.1.2",
