--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "cspell": "cspell --no-progress .",
     "dogfood": "pnpm install && pnpm build && pnpm run-all dogfood",
     "fix-version-mismatch": "syncpack fix-mismatches",
-    "format": "pnpm run prettier --write",
-    "format:check": "pnpm run prettier --check",
+    "format": "prettier --write .",
+    "format:check": "prettier . --check",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "pack:all": "chronus pack --pack-destination ./temp/artifacts",
     "preinstall": "npx only-allow pnpm",
     "prepare-publish": "node ./eng/scripts/prepare-publish.js",
-    "prettier": "prettier . --config .prettierrc.json",
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
     "regen-docs": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run regen-docs",
     "regen-samples": "pnpm run-all run regen-samples",
