--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - packages/*
   - core/ # Install core workspace dependencies too. Needed for prettier plugins
+  - eng/feeds/
   - core/packages/*
   - "!core/packages/http-client-csharp/**"
   - "!core/packages/http-client-java/**"
