--- a/eng/feeds/package.json
+++ b/eng/feeds/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "description": "",
   "devDependencies": {
-    "@typespec/compiler": "^0.60.1",
+    "@typespec/compiler": "workspace:~",
     "vitest": "^2.1.1"
   }
 }
