--- a/packages/azure-http-specs/package.json
+++ b/packages/azure-http-specs/package.json
@@ -46,8 +46,8 @@
     "@types/multer": "^1.4.10",
     "@types/node": "^22.1.0",
     "concurrently": "^9.0.1",
-    "typescript": "~5.6.2",
-    "rimraf": "^6.0.1"
+    "typescript": "~5.6.3",
+    "rimraf": "~6.0.1"
   },
   "peerDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:~",
