--- a/packages/azure-http-specs/package.json
+++ b/packages/azure-http-specs/package.json
@@ -44,7 +44,7 @@
     "@typespec/openapi3": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@types/multer": "^1.4.10",
-    "@types/node": "^22.1.0",
+    "@types/node": "~22.7.5",
     "concurrently": "^9.0.1",
     "typescript": "~5.6.3",
     "rimraf": "~6.0.1"
