--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,7 +24,7 @@
     "@fluentui/react-components": "~9.55.0",
     "@mdx-js/react": "^3.0.1",
     "@typespec/playground": "workspace:~",
-    "@typespec/website": "workspace:~",
+    "@typespec/website": "workspace:*",
     "clsx": "^2.1.1",
     "es-module-shims": "~1.10.0",
     "prism-react-renderer": "^2.4.0",
