--- a/packages/azure-http-specs/package.json
+++ b/packages/azure-http-specs/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@typespec/spector": "workspace:~",
     "@typespec/spec-api": "workspace:~",
-    "@typespec/spec-lib": "workspace:~"
+    "@typespec/spector": "workspace:~"
   },
   "devDependencies": {
     "@azure-tools/typespec-azure-resource-manager": "workspace:~",
