init version of namespace support

--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -23,7 +23,8 @@
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
-      "default": "./dist/src/index.js"
+      "default": "./dist/src/index.js",
+      "typespec": "./lib/main.tsp"
     },
     "./testing": {
       "types": "./dist/src/testing/index.d.ts",
