--- a/website/package.json
+++ b/website/package.json
@@ -17,5 +17,9 @@
     "sharp": "^0.32.5",
     "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@typespec/astro-utils": "workspace:~",
+    "astro-expressive-code": "^0.37.0"
   }
 }
