--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
     "copy": "cp -r ../docs/. ./src/content/docs/docs",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "pnpm copy && astro check && astro build",
+    "build": "pnpm copy && tsx ./.scripts/build.ts",
+    "build:web": "pnpm regen-all-packages-docs && astro check --minimumFailingSeverity warning && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
