--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@azure-tools/typespec-website-astro",
+  "name": "@azure-tools/typespec-azure-website-astro",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,7 @@
     "build": "pnpm copy && tsx ./.scripts/build.ts",
     "build:web": "pnpm regen-all-packages-docs && astro check --minimumFailingSeverity warning && astro build",
     "preview": "astro preview",
+    "regen-all-packages-docs": "pnpm -w --filter \"@azure-tools/typespec-azure-website-astro...\" --filter \"!@typespec/monorepo\" --filter \"!@azure-tools/typespec-azure-monorepo\" run regen-docs",
     "astro": "astro"
   },
   "dependencies": {
@@ -29,11 +30,18 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/react": "~18.3.11",
+    "@azure-tools/typespec-autorest-canonical": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-playground-website": "workspace:~",
+    "@azure-tools/typespec-azure-portal-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
+    "@azure-tools/typespec-azure-rulesets": "workspace:~",
+    "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@types/react-dom": "~18.3.0",
+    "@types/react": "~18.3.11",
     "@types/remark-heading-id": "^1.0.0",
     "@typespec/astro-utils": "workspace:~",
-    "@azure-tools/typespec-azure-playground-website": "workspace:~",
     "astro-expressive-code": "^0.37.0",
     "astro-rehype-relative-markdown-links": "^0.15.0",
     "remark-heading-id": "^1.0.1"
