--- a/website/package.json
+++ b/website/package.json
@@ -22,13 +22,13 @@
     "@docsearch/js": "^3.6.3",
     "@fluentui/react-components": "~9.55.0",
     "@typespec/playground": "workspace:~",
-    "astro": "^4.15.3",
+    "astro": "^4.16.8",
     "copy": "cp -r ../docs/. ./src/content/docs/docs",
     "es-module-shims": "~1.10.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "sharp": "^0.32.5",
-    "typescript": "^5.6.3"
+    "typescript": "~5.6.3"
   },
   "devDependencies": {
     "@azure-tools/typespec-autorest-canonical": "workspace:~",
